--- a/Contacto.html
+++ b/Contacto.html
@@ -31,11 +31,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
                     <li><a href="Servicios.html">Servicios</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
@@ -84,26 +84,27 @@
                 <div class="status alert alert-success" style="display: none"></div>
                 <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="sendemail.php" role="form">
                     <div class="row">
-                        <div class="col-sm-5">
+                        <div class="col-sm-8">
                             <div class="form-group">
-                                <input type="text" class="form-control" required="required" placeholder="Nombre">
+                                <input type="text" name="Nombre" class="form-control" required="required" placeholder="Nombre">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" required="required" placeholder="Apellido">
+                                <input type="text" name="Apellido" class="form-control" required="required" placeholder="Apellido">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" required="required" placeholder="Email">
+                                <input type="text" name="Telefono" class="form-control" required="required" placeholder="Telefono">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="Email" class="form-control" required="required" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <textarea name="Mensaje" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-7">
-                            <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
-                            <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
-                    </div>
-                    
-<!--                    <div class="form-group">
-                                <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
-                    </div>-->
                 </form>
             </div><!--/.col-sm-8-->
             <div class="col-sm-4">
@@ -112,7 +113,9 @@
             </div><!--/.col-sm-4-->
         </div>
     </section><!--/#contact-page-->
-
+    <div style="height:60px;width:1024px">
+        
+    </div>
 <!--    <section id="bottom" class="wet-asphalt">
         <div class="container">
             <div class="row">
@@ -202,7 +205,7 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="Index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="Nosotros.html">Nosotros</a></li>
                         <!--<li><a href="#">Faq</a></li>-->
                         <li><a href="Contacto.html">Contacto</a></li>
