--- a/Nosotros.html
+++ b/Nosotros.html
@@ -31,11 +31,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li class="active"><a href="Nosotros.html">Nosotros</a></li>
                     <li><a href="Servicios.html">Servicios</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
@@ -246,7 +246,7 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="Index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">Nosotros</a></li>
                         <!--<li><a href="#">Faq</a></li>-->
                         <li><a href="Contacto.html">Contacto</a></li>
