--- a/privacy.html
+++ b/privacy.html
@@ -31,11 +31,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="Index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Nosotros.html">About Us</a></li>
                     <li><a href="Servicios.html">Services</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
