--- a/Contacto.html
+++ b/Contacto.html
@@ -37,23 +37,30 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
+                    <!--<li><a href="servicios.html">Servicios</a></li>-->
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#.html">Intalacion</a></li>
+                            <li><a href="#.html">Garantia</a></li>
+                        </ul>
+                    </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="career.html">Juegos Infantiles</a></li>
-                            <li><a href="blog-item.html">Deportes y Ejercicios</a></li>
-                            <li><a href="faq.html">Moviliario Urbano</a></li>
+                            <li><a href="Juegos.html">Juegos Infantiles</a></li>
+                            <li><a href="Deportes.html">Deportes y Ejercicios</a></li>
+                            <li><a href="Moviliario.html">Moviliario Urbano</a></li>
 <!--                            <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
-                            <li><a href="registration.html">Registration</a></li>-->
+                            <li><a href="registration.html">Registration</a></li>
                             <li class="divider"></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
-                            <li><a href="terms.html">Terms of Use</a></li>
+                            <li><a href="terms.html">Terms of Use</a></li>-->
                         </ul>
                     </li>
-                    <li><a href="Blog.html">Blog</a></li> 
+                    <!--<li><a href="Blog.html">Blog</a></li>--> 
                     <li class="active"><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
