--- a/Deportes.html
+++ b/Deportes.html
@@ -46,7 +46,14 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Nosotros.html">Nosotros</a></li>
-                    <li><a href="Servicios.html">Servicios</a></li>
+                    <!--<li><a href="Servicios.html">Servicios</a></li>-->
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#.html">Intalacion</a></li>
+                            <li><a href="#.html">Garantia</a></li>
+                        </ul>
+                    </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
@@ -56,13 +63,13 @@
                             <li><a href="Moviliario.html">Moviliario Urbano</a></li>
 <!--                            <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
-                            <li><a href="registratiBlog Singleon.html">Registration</a></li>-->
+                            <li><a href="registratiBlog Singleon.html">Registration</a></li>
                             <li class="divider"></li>
                             <li><a href="privacy.html">Privacy Policy</a></li>
-                            <li><a href="terms.html">Terms of Use</a></li>
+                            <li><a href="terms.html">Terms of Use</a></li>-->
                         </ul>
                     </li>
-                    <li><a href="Blog.html">Blog</a></li> 
+                    <!--<li><a href="Blog.html">Blog</a></li>--> 
                     <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
