--- a/Juegos.html
+++ b/Juegos.html
@@ -61,7 +61,7 @@
             </ul>
           </li>
           <!--<li><a href="Blog.html">Blog</a></li>--> 
-          <li><a href="Contacto.html">Contact</a></li>
+          <li><a href="Contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
