--- a/Juegos1.html
+++ b/Juegos1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Juegos | Metal Jardin</title>
+    <title>Juegos Infantiles | Metal Plaza</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -45,7 +45,7 @@
                             <li><a href="#.html">Garantia</a></li>
                         </ul>
                     </li>
-                    <li class="active"><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
