--- a/Moviliario.html
+++ b/Moviliario.html
@@ -41,8 +41,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#.html">Intalacion</a></li>
-                            <li><a href="#.html">Garantia</a></li>
+                            <li><a href="#.html">Instalacion</a></li>
+                            <li><a href="Garantia.html">Garantia</a></li>
                         </ul>
                     </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
@@ -50,8 +50,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="Juegos.html">Juegos Infantiles</a></li>
-                            <li class="active"><a href="Deportes.html">Desportes y Ejercicios</a></li>
-                            <li><a href="Moviliario.html">Moviliario Urbano</a></li>
+                            <li><a href="Deportes.html">Desportes y Ejercicios</a></li>
+                            <li class="active"><a href="Moviliario.html">Moviliario Urbano</a></li>
 <!--                            <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
                             <li><a href="registration.html">Registration</a></li>
@@ -61,7 +61,7 @@
                         </ul>
                     </li>
                     <!--<li><a href="Blog.html">Blog</a></li>--> 
-                    <li><a href="Contacto.html">Contact</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
