--- a/Nosotros.html
+++ b/Nosotros.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Nosotros | Metal Jardin</title>
+    <title>Nosotros | Metal Plaza</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -41,8 +41,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#.html">Intalacion</a></li>
-                            <li><a href="#.html">Garantia</a></li>
+                            <li><a href="#.html">Instalacion</a></li>
+                            <li><a href="Garantia.html">Garantia</a></li>
                         </ul>
                     </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
