--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Home | Metal Jardin</title>
+    <title>Home | Metal Plaza</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -41,15 +41,15 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#.html">Intalacion</a></li>
-                            <li><a href="#.html">Garantia</a></li>
+                            <li><a href="#.html">Instalacion</a></li>
+                            <li><a href="Garantia.html">Garantia</a></li>
                         </ul>
                     </li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogo <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="Juegos.html">Juegos Infantiles</a></li>
+                            <li><a href="Juegos1.html">Juegos Infantiles</a></li>
                             <li><a href="Deportes.html">Desportes y Ejercicios</a></li>
                             <li><a href="Moviliario.html">Moviliario Urbano</a></li>
 <!--                            <li><a href="pricing.html">Pricing</a></li>
