--- a/terms.html
+++ b/terms.html
@@ -45,7 +45,7 @@
                             <li><a href="Juegos.html">Career</a></li>
                             <li><a href="Deportes.html">Blog Single</a></li>
                             <li><a href="Moviliario.html">FAQ</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="Garantia.html">Pricing</a></li>
                             <li><a href="404.html">404</a></li>
                             <li><a href="registration.html">Registration</a></li>
                             <li class="divider"></li>
